--- a/documentation/latex/prog_seq_8h_source.tex
+++ b/documentation/latex/prog_seq_8h_source.tex
@@ -1,4 +1,4 @@
-\hypertarget{prog_seq_8h_source}{}\doxysection{prog\+Seq.\+h}
+\hypertarget{prog_seq_8h_source}{}\doxysubsection{prog\+Seq.\+h}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{1 \textcolor{preprocessor}{\#ifndef PROGSEQ\_H}}
